--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,3 +1,6 @@
+# Start
+launch zsh
+
 # Theme
 include ./nord.conf
 
@@ -8,8 +11,9 @@ italic_font        auto
 bold_italic_font   auto
 font_size          12.0
 adjust_line_height 3
+disable_ligatures  never
 
-# Windows layout
+# Windows
 window_padding_width 6.0
 
 # Mouse
